copy / font change

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
   src: url(../fonts/Market_Deco.ttf);
 }
 
+@import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
+
+font-family: 'Oxygen', sans-serif;
 
 *,
 *:before,
@@ -46,7 +49,7 @@ nav a{
 
 hr { 
     display: block;
-    border-top: 4px solid #000;
+    border-top: 4px solid #fff;
     margin:2em auto;
     width: 5%;
 }
@@ -57,7 +60,7 @@ hr {
 }
  
 .tagline{
-    background: url("../images/hero.png");
+    background: url("../images/hero.gif");
     background-size: cover;
     background-position: center 5%;
     background-repeat: no-repeat;
@@ -67,7 +70,7 @@ hr {
 
  
 .tagline-about{
-    background: url("../images/hero.png");
+    background: url("../images/hero.gif");
     background-size: cover;
     background-position: center 5%;
     background-repeat: no-repeat;
@@ -77,6 +80,7 @@ hr {
 
 
 header {
+  opacity: 0.8;
   padding: 1em;
   position: fixed;
   top: 0;
@@ -94,16 +98,16 @@ section {
 body {
   background-size: cover;
   color: #fff;
-  font-family: 'pacifico', sans-serif !important;
+  font-family: 'Open sans', sans-serif !important;
   font-size: 1em;
   font-weight: 400;
   line-height: 1.2em;
 }
 
 h1 {
-  font-family: 'pacifico', serif !important;
-  font-size: 5em;
-  color: #fff;
+  font-family: 'Paytone One', sans-serif !important;
+  font-size: 4em;
+  color: #FFF;
   letter-spacing: px;
   margin-bottom: auto;
 }
@@ -113,33 +117,33 @@ h1.dark {
 }
 
 h2.dark {
-  font-family: 'pacifico', sans-serif !important;
+  font-family: 'Paytone One', sans-serif !important;
   font-size: 2em;
   color: #033248;
 }
 
 .header-black {
-  font-family: 'pacifico', sans-serif !important;
-  font-size: 2em;
+  font-family: 'Paytone One', sans-serif !important;
+  font-size: 1.5em;
   text-align: center;
   color: #033248;
 }
 
 h3 {
-  font-family: 'pacifico', sans-serif !important;
+  font-family: 'Paytone One', sans-serif !important;
   font-size: 1.7em;
-  color: #FFF;
+  color: #033248;
 }
 
 h4 {
-  font-family: 'Market Deco', sans-serif !important;
+  font-family: 'Open sans', sans-serif !important;
   font-size: 1.2em;
   letter-spacing: 4px;
   color: #fff;
 }
 
 p {
-  font-family: 'Market Deco', sans-serif !important;
+  font-family: 'Open sans', sans-serif !important;
   font-size: 1.4em;
   font-weight: normal;
   line-height: 1.7em;
@@ -153,7 +157,7 @@ p {
 }
 
 p-black {
-  font-family: 'Market Deco', sans-serif !important;
+  font-family: 'Open sans', sans-serif !important;
   color: #222;
   font-size: 1.5em;
   font-weight: 100;
@@ -172,7 +176,7 @@ ul {
 
 a {
     color: #CFCFCF;
-    font-family: 'Market Deco';
+    font-family: 'Open sans';
     text-decoration: none;
     text-transform: uppercase;
 }
@@ -199,7 +203,7 @@ a {
 }
 
 .button:hover {
-  background-color: #DFDFDF;
+  background-color: #4B9983;
   color: #FFFFFF;
 }
 
@@ -326,21 +330,20 @@ a {
 }
 
 #service-page {
-  background-color: #EEE;
-}
-
+  background-color: #033248;
 }
 
 
 #service-page p{
-  line-height: 2em;
+  font-size: 1em;
+  line-height: 1.7em;
   width: 100%
 }
 
-
-
-#service-page {
-  background-color: #EFEFEF;
+.service-title {
+  color: #FFF;
+  font-size: 2em;
+  text-align: center;
 }
 
 
@@ -359,16 +362,15 @@ a {
 }
 
 .service h3 {
-  color: #0A402B;
+  color: #033248;
   text-align: center;
-  font-size: 1em;
+  font-size: 1.2em;
   margin-top: 2em;
-  color: #CFCFCF;
 }
 
 .service p {
-  font-family: 'Market Deco', sans-serif;
-  color: #C5C5C5;
+  font-family: 'Open sans', sans-serif;
+  color: #033248;
   text-align: center;
   font-size: .8em;
   font-weight: 100;
@@ -424,7 +426,7 @@ a {
 }
 
 .specialize-item p {
-  font-family: 'Market Deco', sans-serif;
+  font-family: 'Open sans', sans-serif;
   color: #C5C5C5;
   text-align: center;
   font-size: .8em;
