--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ hr {
 
 
 header {
-  opacity: 0.8;
+  opacity: 0.9;
   padding: 1em;
   position: fixed;
   top: 0;
@@ -183,9 +183,9 @@ a {
 
 
 .button {
-    background-color: #eee; 
+    background-color: #4B9983; 
     opacity: 20%;
-    color: #000;
+    color: #FFFFFF;
     border-radius: 25px;
     padding: 15px 32px;
     text-align: center;
@@ -198,17 +198,17 @@ a {
 }
 
 .button.btn-header {
-  background-color: #FFFFFF;
-  color: #033248;
-}
-
-.button:hover {
   background-color: #4B9983;
   color: #FFFFFF;
 }
 
+.button:hover {
+  background-color: #033248;
+  color: #FFFFFF;
+}
+
 .button-black {
-    background-color: #F28F17;
+    background-color: #033248;
     color: white;
 }
 
