--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,8 @@
   src: url(../fonts/Market_Deco.ttf);
 }
 
-@import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Poiret+One');
 
-font-family: 'Oxygen', sans-serif;
 
 *,
 *:before,
@@ -65,7 +64,7 @@ hr {
     background-position: center 5%;
     background-repeat: no-repeat;
     text-align: center;
-    padding: 8em 0 11em;
+    padding: 10em 0 11em;
 }
 
  
