--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 
 
 @font-face {
-  font-family: 'Market Deco';
-  src: url(../fonts/Market_Deco.ttf);
+  font-family: 'Poiret One';
+  src: url(../fonts/PoiretOne-Regular.ttf);
 }
 
 @import url('https://fonts.googleapis.com/css?family=Poiret+One');
