--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ a {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: .9em;
+    font-size: 1.1em;
     margin-top: 20px;
     text-transform: uppercase;
     box-shadow:1px 1px 3px rgba(0,0,0,.25);
